--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-dept-editInfo.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-dept-editInfo.vm
@@ -201,14 +201,14 @@
 			
 			<div class="act">
 				<input type="submit" accesskey="s" class="active btn btn-primary" name="continue" value="$tlang.getString("sitediinf.con")" 
-					onclick="resetOption('continue', 'classInformationForm'); SPNR.disableControlsAndSpin( this, null );" />
+					onclick="resetOption('continue', 'addEditDept'); SPNR.disableControlsAndSpin( this, null );" />
 				#if(!$existingSite)
 					## have the back button for creating site wizard
 					<input type="submit" accesskey="b" name="back" value="$tlang.getString('gen.back')" class="btn btn-secondary" 
-						onclick="resetOption('back', 'classInformationForm'); SPNR.disableControlsAndSpin( this, null );" />
+						onclick="resetOption('back', 'addEditDept'); SPNR.disableControlsAndSpin( this, null );" />
 				#end
 				<input type="submit" accesskey="x" name="cancel" value="$tlang.getString('sitediinf.can')" class="btn btn-secondary" 
-					onclick="resetOption('cancel', 'classInformationForm'); SPNR.disableControlsAndSpin( this, null );" />
+					onclick="resetOption('cancel', 'addEditDept'); SPNR.disableControlsAndSpin( this, null );" />
 			</div>
 			<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 		</fieldset>
