--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-dept-editInfo.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-dept-editInfo.vm
@@ -5,7 +5,7 @@
 	## header for edit site information page
 	<div class="page-header">
 		<h3>
-			#if($existingSite) $tlang.getString("dept.edit") #else $tlang.getString("dept.add") #end 
+			#if($existingSite) $tlang.getString("dept.edit") #else $tlang.getString("dept.add") #end
 		</h3>
 	</div>
 	<style>
@@ -21,16 +21,16 @@
 	<form name="addEditDept" id="addEditDept" method="post" action="#toolForm("SiteAction")">
 		<fieldset>
 			<legend>
-				 $tlang.getString("dept.info")
+				$tlang.getString("dept.info")
 			</legend>
-			
+
 			#if(!$existingSite)
 				## adding new site
 				<div class="instruction">
 					<span class="reqStarInline">*</span> $tlang.getString("sinfo.means")
 				</div>
 			#end
-			
+
 			## adding a new course site
 			#if ($isCourseSite)
 				<table class="table table-striped table-hover table-bordered ms-0" summary="$tlang.getString("sinfo.rosterlist.summary")" border="0">
@@ -42,17 +42,17 @@
 						#foreach ($item in $!selectedProviderCourseTitles.keySet())
 							<tr>
 								<td style="padding-left:1em">
-								#set ($selectedProviderCourse-num=1)
+									#set ($selectedProviderCourse-num=1)
 								$!selectedProviderCourseTitles.get($item)
 								</td>
 							</tr>
 						#end
-						<tr>
-							<td style="height:0;display:none">
-							## do it this way
-								#if ($selectedProviderCourse-num ==0)
-									<script type="text/javascript">document.getElementById('selectedProviderCourse-head').style.display='none'</script>
-							</td>
+					<tr>
+					<td style="height:0;display:none">
+						## do it this way
+						#if ($selectedProviderCourse-num ==0)
+							<script type="text/javascript">document.getElementById('selectedProviderCourse-head').style.display='none'</script>
+						</td>
 						</tr>
 						#end
 					#end
@@ -64,29 +64,29 @@
 						</tr>
 					#end
 					#if ($!cmAuthorizerSections || $!cmRequestedSections || $!manualAddNumber)
-						<tr class="exclude"><td colspan="2" style="padding:.4em 0">
+					<tr class="exclude"><td colspan="2" style="padding:.4em 0">
 						<h4><span >$tlang.getString("sinfo.requestedSections")</span></h4>
 						#foreach ($sect in $!cmRequestedSections)
 							<tr>
 								<td style="padding-left:1em">
 									$sect.title $tlang.getString("man.requested")
 								</td>
-							</tr>	
+							</tr>
 						#end
-					   #foreach ($sect in $!cmAuthorizerSections)
+						#foreach ($sect in $!cmAuthorizerSections)
 							<tr>
 								<td style="padding-left:1em">
 									$sect.eid: $sect.title, $sect.categoryDescription (Pending approval by $sect.authorizer)
 								</td>
-							</tr>	
+							</tr>
 						#end
 						#if($existingSite)
 							#foreach($id in $!manualCourseList)
-									<tr>
+								<tr>
 									<td style="padding-left:1em">
 										$id $tlang.getString("man.requested")
 									</td>
-									</tr>
+								</tr>
 							#end
 						#else
 							## for new site
@@ -95,21 +95,21 @@
 								#set($bound = $!form_requiredFields.size())
 								#set($bound = $bound - 1)
 								<tr>
-								<td style="padding-left:1em">
-									#set($courseFieldString="")
+									<td style="padding-left:1em">
+										#set($courseFieldString="")
 									#foreach ($fieldCount in [0..$!bound])
 										#set($courseFieldString=$courseFieldString.concat($!courseFieldValues.get($fieldCount).getValue()).concat(" "))
 									#end
 									#set($courseFieldString=$courseFieldString.trim())
 									$courseFieldString $tlang.getString("man.requested")
-								</td>
+									</td>
 								</tr>
-						#end
+							#end
 						#end
 					#end
 				</table>
 			#end
-			
+
 			## Department Name (added from chef_users_edit.vm) ##
 			## Title ##
 			<div class="mb-3 row">
@@ -134,7 +134,7 @@
 					Parent Department
 				</label>
 				<div class="col-sm-4">
-					<input type="hidden" name="new_name" id="new_name" size="40" maxlength="10" value="devtek-site-parent" class="form-control"/>
+					<input type="hidden" name="new_name" id="new_name" size="40" maxlength="10" value="sakai:parent-id" class="form-control"/>
 					<select name="new_value" id="new_value" class="form-control sakai-glow">
 						<option value="" #if ($devtek-site-parent == "")selected="true" #end>Select Department</option>
 						#foreach($site in $allsites)
@@ -161,10 +161,10 @@
 			</div>
 
 
-			
+
 			<input type="hidden" name="hasRosterAttached" id="hasRosterAttached" value="$hasRosterAttached" />
-			
-			
+
+
 			## Contact Name ##
 			<div class="row d-none">
 				<label for="siteContactName" class="col-sm-2 form-control-label d-none">
@@ -174,13 +174,13 @@
 				<div class="col-sm-4">
 					<input type="text" name="siteContactName" id="siteContactName" size="20" maxlength="99" value="$!validator.escapeHtml($!form_site_contact_name)" />
 				</div>
-			</div>		
+			</div>
 			## Contact Email ##		
 			<div class="row d-none">
 				<label for="siteContactEmail" class="col-sm-2 form-control-label d-none">
 					$tlang.getString("sitediinf.sitconema")
-				</label>	
-				<div class="col-sm-4">			
+				</label>
+				<div class="col-sm-4">
 					<input type="text" name="siteContactEmail" id="siteContactEmail" size="20" maxlength="99" value="$!form_site_contact_email" />
 				</div>
 			</div>
@@ -195,20 +195,20 @@
 			<input type="hidden" name="option" id="option" value="x" />
 			<input type="hidden" name="eventSubmit_doEdit_site_info" value="x" />
 			<input type="hidden" name="new_name" id="new_name" size="40" maxlength="10" value="devtek-department-type" class="form-control"/>
-            <input type="hidden" name="new_value" id="new_value" size="40" maxlength="10" value="department" class="form-control sakai-glow"/>
+			<input type="hidden" name="new_value" id="new_value" size="40" maxlength="10" value="department" class="form-control sakai-glow"/>
 			<input type="hidden" name="new_name" id="new_name" size="40" maxlength="10" value="devtek-school-id" class="form-control"/>
-            <input type="hidden" name="new_value" id="new_value" size="40" maxlength="10" value="$devtek-school-id" class="form-control sakai-glow"/>
-			
+			<input type="hidden" name="new_value" id="new_value" size="40" maxlength="10" value="$devtek-school-id" class="form-control sakai-glow"/>
+
 			<div class="act">
-				<input type="submit" accesskey="s" class="active btn btn-primary" name="continue" value="$tlang.getString("sitediinf.con")" 
-					onclick="resetOption('continue', 'addEditDept'); SPNR.disableControlsAndSpin( this, null );" />
+				<input type="submit" accesskey="s" class="active btn btn-primary" name="continue" value="$tlang.getString("sitediinf.con")"
+					   onclick="resetOption('continue', 'addEditDept'); SPNR.disableControlsAndSpin( this, null );" />
 				#if(!$existingSite)
 					## have the back button for creating site wizard
-					<input type="submit" accesskey="b" name="back" value="$tlang.getString('gen.back')" class="btn btn-secondary" 
-						onclick="resetOption('back', 'addEditDept'); SPNR.disableControlsAndSpin( this, null );" />
+					<input type="submit" accesskey="b" name="back" value="$tlang.getString('gen.back')" class="btn btn-secondary"
+						   onclick="resetOption('back', 'addEditDept'); SPNR.disableControlsAndSpin( this, null );" />
 				#end
-				<input type="submit" accesskey="x" name="cancel" value="$tlang.getString('sitediinf.can')" class="btn btn-secondary" 
-					onclick="resetOption('cancel', 'addEditDept'); SPNR.disableControlsAndSpin( this, null );" />
+				<input type="submit" accesskey="x" name="cancel" value="$tlang.getString('sitediinf.can')" class="btn btn-secondary"
+					   onclick="resetOption('cancel', 'addEditDept'); SPNR.disableControlsAndSpin( this, null );" />
 			</div>
 			<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 		</fieldset>
