--- a/admin-tools/src/webapp/vm/user/chef_users_list.vm
+++ b/admin-tools/src/webapp/vm/user/chef_users_list.vm
@@ -78,29 +78,66 @@
 #if ($users.size() > 0)
 			<table class="table table-hover table-striped table-bordered" summary ="$tlang.getString("uselis.lisof")">
 				<tr>
-					<th id="Eid">$tlang.getString("useconrem.useid")</th>
-					<th id="Name">$tlang.getString("useconrem.nam")</th>
-					<th id="Email">$tlang.getString("useconrem.ema")</th>
-					<th id="Type" class="d-none d-sm-table-cell">$tlang.getString("usecre.typ")</th>
-					<th id="Status" class="d-none d-sm-table-cell">$tlang.getString("usecre.status")</th>
+					<th width="15%" id="Eid">$tlang.getString("useconrem.useid")</th>
+					<th width="15%" id="Name">$tlang.getString("useconrem.nam")</th>
+					<th width="25%" id="Email">$tlang.getString("useconrem.ema")</th>
+					<th  width="15%"  id="Type" class="d-none d-sm-table-cell">$tlang.getString("usecre.typ")</th>
+					<th  width="auto" id="Status" class="d-none d-sm-table-cell">$tlang.getString("usecre.status")</th>
 				</tr>
+
+				<!-- Add this after the existing table or wherever you want to display the full user objects -->
+
 	#foreach ($user in $users)
-				<tr>
-					<td headers="Eid">
-		#if ($service.allowUpdateUser($user.Id))
-						<a href="#toolLinkParam("$action" "doEdit" "id=$formattedText.escapeUrl($user.Id)")">
-							$formattedText.escapeHtml($user.Eid)
-						</a>
-		#else
-						$formattedText.escapeHtml($user.Eid)
-		#end
-					</td>
-					<td headers="Name">$formattedText.escapeHtml($user.SortName)</td>
-					<td headers="Email">$formattedText.escapeHtml($user.Email)</td>
-					<td headers="Type" class="d-none d-sm-table-cell">$formattedText.escapeHtml($user.Type)</td>
-					<td headers="Status" class="d-none d-sm-table-cell">#if($!user.Properties.getProperty("disabled")) $tlang.getString("disabled") #else $tlang.getString("enabled") #end</td>
-					</td>
-				</tr>
+    <tr>
+        <td headers="Eid">
+            #if ($service.allowUpdateUser($user.Id))
+                <a href="#toolLinkParam("$action" "doEdit" "id=$formattedText.escapeUrl($user.Id)")">
+                    $formattedText.escapeHtml($user.Eid)
+                </a>
+            #else
+                $formattedText.escapeHtml($user.Eid)
+            #end
+        </td>
+        <td headers="Name">$formattedText.escapeHtml($user.SortName)</td>
+        <td headers="Email">$formattedText.escapeHtml($user.Email)</td>
+        
+        #set($index = $velocityCount)  ## built-in counter for foreach loop (starts at 1)
+		<td headers="Type$index" class="d-none d-sm-table-cell">
+			#if($user.Properties && $user.Properties.getProperty("devtek-user-type"))
+				#set($devtekUserType = $user.Properties.getProperty("devtek-user-type"))
+				#set($displayType = "--")
+				
+				## Check for specific user type patterns and map to desired display values
+				#if($devtekUserType.startsWith("student_"))
+					#set($displayType = "Student")
+				#elseif($devtekUserType.startsWith("teacher_"))
+					#set($displayType = "Teacher")
+				#elseif($devtekUserType.startsWith("parent_"))
+					#set($displayType = "Parent")
+				#elseif($devtekUserType.startsWith("admin_"))
+					#set($displayType = "Admin")
+				#else
+					## Extract first part before underscore for other types
+					#if($devtekUserType.contains("_"))
+						#set($firstPart = $devtekUserType.substring(0, $devtekUserType.indexOf("_")))
+						#set($displayType = $firstPart.substring(0, 1).toUpperCase() + $firstPart.substring(1))
+					#else
+						#set($displayType = $devtekUserType)
+					#end
+				#end
+				
+				$formattedText.escapeHtml($displayType)
+			#else
+				$formattedText.escapeHtml($user.Type)
+			#end
+		</td>
+
+
+
+		<td headers="Status" class="d-none d-sm-table-cell">#if($!user.Properties.getProperty("disabled")) $tlang.getString("disabled") #else $tlang.getString("enabled") #end</td>
+
+    </tr>
+
 	#end
 			</table>
 #else
